@@ -1,5 +1,10 @@
 DATE       AUTHOR   CHANGE
 ---------- -------- -----------------------------------------------------------
+2005-12-12 patrickh Changed the signatures of vpr::InetAddr::getLocalHost(),
+                    vpr::InetAddr::getAllLocalAddrs(), and
+                    vpr::InetAddr::getHostname() to return a result rather than
+                    to take the result storage as a by-reference parameter.
+                    NEW VERSION: 1.1.13
 2005-12-11 patrickh Added vpr::InetAddr::getAllLocalAddrs().
                     NEW VERSION: 1.1.12
 2005-12-09 patrickh Added vpr::IllegalArgumentException.
